--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ h5 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 2rem;
+    padding: 1rem 2rem;
     gap: 1.5rem;
     background-color: #1A1A1A;
     border-radius: 10px;
