--- a/style.css
+++ b/style.css
@@ -890,6 +890,108 @@ footer {
     padding: 4rem 0 3rem 3rem;
 }
 
+.blog-bottom {
+    display: flex;
+    border-top: 1px solid #262626;
+    border-bottom: 1px solid #262626;
+}
+
+.blog-left {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    border-right: 1px solid #262626;
+}
+
+.blog-left-top {
+    padding: 4rem 5rem 4rem 9rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-bottom: 1px solid #262626;
+}
+
+.blog-left-bottom {
+    padding: 4rem 5rem 4rem 9rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.blog-button {
+    display: flex;
+    justify-content: center;
+}
+
+.blog-right {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.blog-right-top {
+    padding: 2rem 0rem 2rem 3rem;
+    border-bottom: 1px solid #262626;
+    display: flex;
+}
+
+.blog-right-bottom {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem 9rem 0 3rem;
+}
+
+.blog-sub1 {
+    display: flex;
+    gap: 9rem;
+    margin-bottom: 4rem;
+}
+
+.blog-sub {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.cat {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.blog-sub2 {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+ul {
+    background-color: #1A1A1A;
+    padding: 1rem 0 1rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 10px;
+}
+
+li {
+    color: white;
+    font-size: 18px;
+    font-family: "Inter", sans-serif;
+
+}
+
+.blog-second-top {
+    display: flex;
+    padding: 5rem 9rem 0 9rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.blog-top img {
+    width: 100%;
+}
+
 @media screen and (max-width: 1580px) {
     h1 {
         font-size: 60px;
@@ -1003,6 +1105,26 @@ footer {
     .topics-sub h4 {
         font-size: 20px;
     }
+
+    .blog-left-top {
+        padding: 3rem;
+    }
+
+    .blog-left-bottom {
+        padding: 3rem;
+    }
+
+    .blog-second-top {
+        padding: 3rem 3rem 0 3rem;
+    }
+
+    .blog-right-bottom {
+        padding: 3rem;
+    }
+
+    .blog-right-top {
+        padding: 2rem 3rem 2rem 2rem;
+    }
 }
 
 @media screen and (max-width: 1440px) {
@@ -1021,6 +1143,10 @@ footer {
 
     .topics-sub h4 {
         font-size: 18px;
+    }
+
+    .blog-sub1 {
+        gap: 3rem;
     }
 }
 
@@ -1058,6 +1184,10 @@ footer {
 
     .topics-sub button {
         font-size: 15px;
+    }
+
+    .cat h3 {
+        font-size: 18px;
     }
 }
 
@@ -1251,6 +1381,14 @@ footer {
         padding: 5px;
     }
 
+    .cat h3 {
+        font-size: 15px;
+    }
+
+    li {
+        font-size: 15px;
+    }
+
 }
 
 @media screen and (max-width: 1280px) {
@@ -1375,11 +1513,27 @@ footer {
     .climate-text .rate {
         padding: 5px 8px;
     }
+
+    .blog-right-bottom {
+        padding: 3rem 3rem 0 2rem;
+    }
+
+    .cat h3 {
+        font-size: 13px;
+    }
+
+    li {
+        font-size: 13px;
+    }
 }
 
 @media screen and (max-width: 870px) {
     .climate p {
         font-size: 13px;
+    }
+
+    .blog-right-top .rate {
+        padding: 5px;
     }
 }
 
@@ -1836,9 +1990,40 @@ footer {
         border-top: 1px solid #393939;
     }
 
-    .view-sub-div:nth-of-type(1) {
-        /* border-right: none; */
+    .blog-bottom {
+        flex-direction: column-reverse;
     }
+
+    .blog-right {
+        width: 100%;
+    }
+
+    .blog-left {
+        width: 100%;
+    }
+
+    .blog-right-top {
+        padding: 1rem;
+        justify-content: center;
+    }
+
+    .blog-right-bottom {
+        padding: 1rem 1rem 2rem 1rem;
+        border-bottom: 1px solid #262626;
+    }
+
+    .blog-left-top {
+        padding: 1rem;
+    }
+
+    .blog-left-bottom {
+        padding: 1rem;
+    }
+
+    .blog-second-top {
+        padding: 1rem 1rem 0 1rem;
+    }
+
 
 }
 
