--- a/style.css
+++ b/style.css
@@ -456,6 +456,7 @@ h6 {
     display: flex;
     flex-direction: column;
     gap: 0;
+    border-bottom: 1px solid #262626;
 }
 
 .fourth-top {
@@ -1030,6 +1031,80 @@ li {
     gap: 10px;
 }
 
+.res-rate {
+    display: flex;
+    padding: 0 9rem;
+    justify-content: space-between;
+}
+
+.res-rate-sub {
+    border-right: 1px solid #262626;
+    text-align: center;
+    padding: 3rem 0;
+    width: 25%;
+}
+
+.res-rate-sub:last-child {
+    border-right: none;
+}
+
+.res-type {
+    display: flex;
+    gap: 10px;
+    border: 2px solid #262626;
+    padding: 1rem 1rem 0 1rem;
+    border-radius: 7px;
+
+}
+
+.res-type p {
+    padding: 15px 25px;
+    background-color: #141414;
+    border: 2px solid #262626;
+    border-radius: 7px;
+    color: #98989A;
+}
+
+.res-type p:first-child {
+    color: white;
+    background-color: #1A1A1A;
+}
+
+.res-sub1 {
+    display: flex;
+    align-items: center;
+}
+
+.res-sub-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.res-sub2 {
+    display: flex;
+    gap: 1rem;
+
+}
+
+.res-sub2-text {
+    border: 2px solid #262626;
+    width: 33%;
+    background-color: #1A1A1A;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+}
+
+.res-button {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+
 @media screen and (max-width: 1580px) {
     h1 {
         font-size: 60px;
@@ -1162,6 +1237,10 @@ li {
 
     .blog-right-top {
         padding: 2rem 3rem 2rem 2rem;
+    }
+
+    .res-rate {
+        padding: 0 3rem;
     }
 }
 
@@ -1439,6 +1518,13 @@ li {
         gap: 2rem;
     }
 
+    .res-rate {
+        padding: 0 2rem;
+    }
+
+    .res-rate-sub {
+        padding: 1rem 0;
+    }
 }
 
 @media screen and (max-width: 1280px) {
@@ -1488,6 +1574,15 @@ li {
     .topics-sub {
         width: 45%;
     }
+
+    .res-sub2-text {
+        padding: 10px;
+        gap: 5px;
+    }
+
+    .res-sub1 {
+        padding: 1rem;
+    }
 }
 
 @media screen and (max-width: 1020px) {
@@ -1505,6 +1600,9 @@ li {
         width: 50%;
     }
 
+    .res-sub1 {
+        padding: 1rem;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -1594,6 +1692,16 @@ li {
 
     .blog-right-top .rate {
         padding: 5px;
+    }
+
+    .res-sub2 {
+        flex-direction: column;
+    }
+
+    .res-sub2-text {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 
@@ -2088,6 +2196,19 @@ li {
         width: 200px;
     }
 
+    .res-rate {
+        padding: 0 1rem;
+        flex-wrap: wrap;
+    }
+
+    .res-rate-sub {
+        width: 50%;
+        border-bottom: 1px solid #262626;
+    }
+
+    .res-rate-sub:nth-of-type(2) {
+        border-right: none;
+    }
 }
 
 @media screen and (max-width: 400px) {
