--- a/style.css
+++ b/style.css
@@ -1104,6 +1104,160 @@ li {
     margin-top: 1rem;
 }
 
+.con-top {
+    display: flex;
+    padding: 0 9rem;
+}
+
+.con-top-sub {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    padding: 3rem 1rem;
+    border-right: 1px solid #262626;
+    align-items: center;
+    gap: 2rem;
+}
+
+.con-top-sub:last-child {
+    border-right: none;
+}
+
+.con-button {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.con-socials img {
+    background-color: #1A1A1A;
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px solid #262626;
+}
+
+.con-socials {
+    display: flex;
+    gap: 10px;
+}
+
+.con-bottom {
+    display: flex;
+    padding: 0 9rem;
+    border-top: 1px solid #262626;
+    align-items: center;
+    border-bottom: 1px solid #262626;
+}
+
+.con-left {
+    padding-right: 3rem;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.con-left img {
+    width: 80px;
+}
+
+.con-left button img {
+    width: 30px;
+}
+
+.con-right {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    padding: 3rem 0 3rem 3rem;
+    gap: 2rem;
+    border-left: 1px solid #262626;
+}
+
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 48%;
+}
+
+.form-input p {
+    background-color: #1A1A1A;
+    border: 1px solid #262626;
+    padding: 1rem;
+    border-radius: 7px;
+    height: 4rem;
+
+}
+
+.form-term {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.con-term {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.con-term button {
+    background-color: #ffD11A;
+    color: #000;
+}
+
+.form-sub {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+.con-message p {
+    background-color: #1A1A1A;
+    border: 1px solid #262626;
+    border-radius: 7px;
+    height: 10rem;
+    padding: 1rem;
+}
+
+.con-message {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.con-ai {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #1A1A1A;
+    padding: 2rem;
+    border: 1px solid #262626;
+    border-radius: 7px;
+}
+
+.what {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #262626;
+    padding-bottom: 1rem;
+}
+
+.con-sub {
+    display: flex;
+    justify-content: space-between;
+    background-color: #1A1A1A;
+    padding: 2rem;
+    border: 1px solid #262626;
+    border-radius: 7px;
+}
 
 @media screen and (max-width: 1580px) {
     h1 {
@@ -1240,6 +1394,14 @@ li {
     }
 
     .res-rate {
+        padding: 0 3rem;
+    }
+
+    .con-top {
+        padding: 0 3rem;
+    }
+
+    .con-bottom {
         padding: 0 3rem;
     }
 }
@@ -1603,6 +1765,14 @@ li {
     .res-sub1 {
         padding: 1rem;
     }
+
+    .con-top-sub p {
+        font-size: 12px;
+    }
+
+    .con-top-sub button {
+        font-size: 12px;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -1682,6 +1852,10 @@ li {
         width: 100%;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .con-top-sub {
+        padding: 1rem;
     }
 }
 
@@ -1835,6 +2009,9 @@ li {
         padding: 1rem;
     }
 
+    .con-socials img {
+        padding: 5px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -2217,9 +2394,69 @@ li {
     }
 
     .res-type p {
-        /* width: fit-content; */
         padding: 10px 15px;
     }
+
+    .con-top {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .con-top-sub {
+        width: 100%;
+        align-items: flex-start;
+        border-right: none;
+        border-bottom: 1px solid #262626;
+    }
+
+    .con-top-sub:last-child {
+        border-bottom: none;
+    }
+
+    .con-top-sub button {
+        font-size: 15px;
+    }
+
+    .con-top-sub p {
+        font-size: 15px;
+    }
+
+    .con-button {
+        justify-content: center;
+    }
+
+    .con-bottom {
+        flex-direction: column;
+        padding: 0 1rem;
+    }
+
+    .con-left {
+        width: 100%;
+        padding: 2rem 0;
+        border-bottom: 1px solid #262626;
+    }
+
+    .con-right {
+        border-left: none;
+        width: 100%;
+        padding: 2rem 0;
+        gap: 1rem;
+    }
+
+    .form-group {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .form-input {
+        width: 100%;
+    }
+
+    .con-term {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
 }
 
 @media screen and (max-width: 400px) {
@@ -2235,4 +2472,5 @@ li {
         gap: 10px;
         padding: 10px 5px 0 5px;
     }
+
 }
